src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Last_Privacy_Notice_Sent__c</fullName>
        <label>Last Privacy Notice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Rebalancing__c</fullName>
        <label>Last Rebalancing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Risk_Tolerance_Review__c</fullName>
        <label>Last Risk Tolerance Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Tax_Plan_Review__c</fullName>
        <label>Last Tax Plan Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Counsel__c</fullName>
        <label>Legal Counsel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Managed_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Managed Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Updates_Method__c</fullName>
        <label>Manager Updates Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Vault</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Cap__c</fullName>
        <label>Market Cap</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small/Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marriage_Anniversary_This_Year__c</fullName>
        <formula>DATE(YEAR(DATEVALUE(NOW())),MONTH( Marriage_Date__c ), DAY( Marriage_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marriage Anniversary This Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marriage_Date__c</fullName>
        <label>Marriage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Frequency__c</fullName>
        <label>Meeting Frequency Notes</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Merge_Address__c</fullName>
        <description>Returns the corresponding formatted address based on Address for Mail Merge selection. If none selected, returns Primary address.</description>
        <formula>CASE(Address_for_Mail_Merge__c, &quot;Primary&quot;, Primary_Address_Formatted__c, &quot;Secondary&quot;, Secondary_Address_Formatted__c , &quot;Third&quot;, Third_Address_Formatted__c, &quot;Fourth&quot;, Fourth_Address_Formatted__c, Primary_Address_Formatted__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_C_O__c</fullName>
        <formula>Case( Address_for_Mail_Merge__c , &quot;Primary&quot;,  Primary_C_O__c, &quot;Secondary&quot;, Secondary_C_O__c, &quot;Third&quot;, Third_C_O__c, &quot;Fourth&quot;,  Fourth_C_O__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge C/O</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_City__c</fullName>
        <formula>Case( Address_for_Mail_Merge__c , &quot;Primary&quot;, Primary_City__c , &quot;Secondary&quot;, Secondary_City__c , &quot;Third&quot;, Third_City__c , &quot;Fourth&quot;,  Fourth_City__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Country__c</fullName>
        <formula>Case( Address_for_Mail_Merge__c , &quot;Primary&quot;, Primary_Country__c , &quot;Secondary&quot;, Secondary_Country__c , &quot;Third&quot;, Third_Country__c ,  &quot;Fourth&quot;, Fourth_Country__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_State__c</fullName>
        <formula>Case( Address_for_Mail_Merge__c , &quot;Primary&quot;, Primary_State__c , &quot;Secondary&quot;, Secondary_State__c , &quot;Third&quot;, Third_State__c , &quot;Fourth&quot;, Fourth_State__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Street_2__c</fullName>
        <formula>Case(Address_for_Mail_Merge__c , &quot;Primary&quot;, Primary_Street_2__c , &quot;Secondary&quot;, Secondary_Street_2__c , &quot;Third&quot;, Third_Street_2__c , &quot;Fourth&quot;, Fourth_Street_2__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Street 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Street__c</fullName>
        <formula>CASE( Address_for_Mail_Merge__c , &quot;Primary&quot;, Primary_Street__c , &quot;Secondary&quot;, Secondary_Street__c ,&quot;Third&quot;, Third_Street__c , &quot;Fourth&quot;, Fourth_Street__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Zip__c</fullName>
        <formula>Case(Address_for_Mail_Merge__c , &quot;Primary&quot;, Primary_Zip__c , &quot;Secondary&quot;, Secondary_Zip__c , &quot;Third&quot;, Third_Zip__c ,&quot;Fourth&quot;, Fourth_Zip__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitored_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monitored Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Morningstar_Category__c</fullName>
        <label>Morningstar Category</label>
        <picklist>
            <picklistValues>
                <fullName>Large Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Blend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Blend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Blend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities Broad Basket Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convertibles Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified Emerging Mkts Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Allocation Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Large Cap Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Mid-Cap Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Small Cap Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Taxable Bond Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible Bond Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Large Cap Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Small/Mid Cap Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Bond Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflation-Protected Bond Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Bond Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pan Asia Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precious Metals Sector Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate Sector Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tactical Allocation Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target Date Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World Allocation Funds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_Worth_Adjusted__c</fullName>
        <inlineHelpText>Auto-calculation from Assets and Liabilities.  Only includes records marked as &quot;Include in Net Worth&quot; on the Asset &amp; Liability record.</inlineHelpText>
        <label>Net Worth (Adjusted)</label>
        <summarizedField>XLR8_Assets_Liabilities__c.Value_Balance__c</summarizedField>
        <summaryFilterItems>
            <field>XLR8_Assets_Liabilities__c.Include_In_Net_Worth__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>XLR8_Assets_Liabilities__c.Entity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Worth__c</fullName>
        <inlineHelpText>Auto-calculation from all Assets and Liability records: Financial Assets + Retirement/529 Plan Assets + Use Assets - Liabilities.</inlineHelpText>
        <label>Net Worth</label>
        <summarizedField>XLR8_Assets_Liabilities__c.Value_Balance__c</summarizedField>
        <summaryForeignKey>XLR8_Assets_Liabilities__c.Entity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Newsletter_Method__c</fullName>
        <label>Newsletter Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Vault</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Estimate__c</fullName>
        <label>Performance Estimate</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance_Reports_Method__c</fullName>
        <label>Performance Reports Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Vault</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_2_Type__c</fullName>
        <label>Phone 2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Formatted__c</fullName>
        <formula>IF(Primary_C_O__c &lt;&gt; NULL, Primary_C_O__c &amp; BR(), &quot;&quot;) &amp; Primary_Street__c &amp; BR() &amp; IF(Primary_Street_2__c &lt;&gt; NULL, Primary_Street_2__c &amp; BR(), &quot;&quot;) &amp; Primary_City__c &amp; &quot;, &quot; &amp; Primary_State__c &amp; &quot; &quot; &amp; Primary_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_C_O__c</fullName>
        <inlineHelpText>Add person or company in care of, if applicable.</inlineHelpText>
        <label>Primary C/O</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_City__c</fullName>
        <label>Primary City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Country__c</fullName>
        <label>Primary Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Mailing_Notes__c</fullName>
        <label>Primary Mailing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_State__c</fullName>
        <label>Primary State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Street_2__c</fullName>
        <label>Primary Street 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Street__c</fullName>
        <label>Primary Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Type__c</fullName>
        <label>Primary Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Zip__c</fullName>
        <label>Primary Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Broker__c</fullName>
        <label>Prime Broker</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Policy__c</fullName>
        <label>Privacy Policy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RP_Primary_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Retirement Plan Primary Rep</inlineHelpText>
        <label>RP Primary Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RP_Secondary_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Retirement Plan Secondary Rep</inlineHelpText>
        <label>RP Secondary Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Notes__c</fullName>
        <label>Referral Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this entity intends to participate in your partner referral program.</inlineHelpText>
        <label>Referral Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <inlineHelpText>How did this entity come to know about your firm?</inlineHelpText>
        <label>Referral Source</label>
        <picklist>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - CPA Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Law Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Other Advisory Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research_Method__c</fullName>
        <label>Research Method</label>
        <picklist>
            <picklistValues>
                <fullName>Fundamental/Bottom-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundamental/Top-Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical/Bottom-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical/Top-Down</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEC_Registered__c</fullName>
        <label>SEC Registered</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Address_Formatted__c</fullName>
        <formula>IF(Secondary_C_O__c &lt;&gt; NULL, Secondary_C_O__c &amp; BR(), &quot;&quot;) &amp; Secondary_Street__c &amp; BR() &amp; IF(Secondary_Street_2__c &lt;&gt; NULL, Secondary_Street_2__c &amp; BR(), &quot;&quot;) &amp; Secondary_City__c &amp; &quot;, &quot; &amp; Secondary_State__c &amp; &quot; &quot; &amp; Secondary_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_C_O__c</fullName>
        <inlineHelpText>Add person or company in care of, if applicable.</inlineHelpText>
        <label>Secondary C/O</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_City__c</fullName>
        <label>Secondary City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Country__c</fullName>
        <label>Secondary Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Mailing_Notes__c</fullName>
        <label>Secondary Mailing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_State__c</fullName>
        <label>Secondary State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Street_2__c</fullName>
        <label>Secondary Street 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Street__c</fullName>
        <label>Secondary Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Type__c</fullName>
        <label>Secondary Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Zip__c</fullName>
        <label>Secondary Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <inlineHelpText>This is the service level category for the client as defined by the firm.</inlineHelpText>
        <label>Service Level</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <picklist>
            <picklistValues>
                <fullName>Business Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Benefits (Outsourced)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mergers &amp; Acquisitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Plannning</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>No Contact Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Contact Made (phone/email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Complete (phone/email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Appointment Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Appointment Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Appointment Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stated_Minimums__c</fullName>
        <label>Stated Minimums</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Note this field is only used on the Investment Entity Page Layout</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Investors__c</fullName>
        <label>Strategic Investors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Estimates_Method__c</fullName>
        <label>Tax Estimates Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Vault</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Estimates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Estimates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_ID_EIN__c</fullName>
        <inlineHelpText>This field is used for the tax id (or EIN) in cases where the Entity is a Company or Trust.</inlineHelpText>
        <label>Tax ID (EIN)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terminated_Date__c</fullName>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Date_AUM__c</fullName>
        <label>Termination Date AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Termination_Reason__c</fullName>
        <label>Termination Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Address_Formatted__c</fullName>
        <formula>IF(Third_C_O__c &lt;&gt; NULL, Third_C_O__c &amp; BR(), &quot;&quot;) &amp; Third_Street__c &amp; BR() &amp; IF(Third_Street_2__c &lt;&gt; NULL, Third_Street_2__c &amp; BR(), &quot;&quot;) &amp; Third_City__c &amp; &quot;, &quot; &amp; Third_State__c &amp; &quot; &quot; &amp; Third_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Third Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_C_O__c</fullName>
        <inlineHelpText>Add person or company in care of, if applicable.</inlineHelpText>
        <label>Third C/O</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_City__c</fullName>
        <label>Third City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Country__c</fullName>
        <label>Third Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Mailing_Notes__c</fullName>
        <label>Third Mailing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_State__c</fullName>
        <label>Third State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Street_2__c</fullName>
        <label>Third Street 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Street__c</fullName>
        <label>Third Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Type__c</fullName>
        <label>Third Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Zip__c</fullName>
        <label>Third Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trust_Sign_Date__c</fullName>
        <label>Trust Sign Date</label>
        <type>Date</type>
    </fields>
</CustomObject>